2006-10-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/matprod.R: add a variation of Harri's example

	* R/dsparseMatrix.R: fix crossprod(<dsparse>, <dge>) to *not*
	recursive infinitely.

	* R/dgCMatrix.R: + solve(<sparse>, <sparse>)

	* tests/indexing.R: add test for the "<" bug fixed 10-27 in R/dMatrix.R

2006-10-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R (tstMatrixClass): more: use non-trivial
	matrix if possible; test m+m == 2*m; now test dgRMatrix.
	* R/dgRMatrix.R (.to.dgR): a few more coercions, in order to
	satisfy the above test.

2006-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Ops):  <Matrix> o <matrix>  method added

	* R/dgCMatrix.R: solve(a, b="missing") based on
	* src/dgCMatrix.c (dgCMatrix_matrix_solve): extend to work with
	RHS = NULL.

	* R/diagMatrix.R (diagdiagprod): extend %*% etc to ldiMatrix;
	add more (needed) [t]crossprod() methods.

	* man/ddiMatrix-class.Rd: more info, notably on 'diag'

	* R/Auxiliaries.R (as_CspClass): cleanup
	(drop0): internal utility for "Csparse_drop(*, 0)"
	(.bail.out.2): encourage active feedback

2006-10-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R(Compare): new(), then slots [no validity check]

	* src/Csparse.c (Csparse_validate): fixed (and more efficient in
	non-valid or 'sorted' case).

	* R/dsparseMatrix.R: add "chol" method.
	* R/ddenseMatrix.R: ditto

	* R/diagMatrix.R (Ops): group methods for  <diagonal> o <sparse>
	* NAMESPACE (Ops)
	* R/diagMatrix.R (diag2T): simple utility used "higher level"
	coercion; deprecating direct lower level coercions.

	* R/*.R (seq): use seq_len() and seq_along() where possible.


2006-10-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9975-5 ready for release

2006-10-20  Douglas Bates  <bates@stat.wisc.edu>

	* src/init.c (R_init_Matrix): export more cholmod CCallable functions.

2006-10-20  Martin Maechler  <maechler@stat.math.ethz.ch>
